--- a/profes.html
+++ b/profes.html
@@ -92,22 +92,33 @@
 		</div>
 		
 		 <div class="info esconde" id="segunda">
-                <div class="medio"><img src="viz/Magdalena-Cattan_01.gif"></div>
-                <div class="medio"><p>.</p>
-                <p>Contacto: .</p>
-                <dd>.
-Facultad de Arquitectura y Urbanismo
-Jornada: -- hrs</dd></div>
-                <div class="completo"><img src="viz/Magdalena-Cattan_03.gif"></div>
-                <div class="completo"><img src="viz/Magdalena-Cattan_04.gif"></div>
-                <div class="medio"><p>Áreas Prioritarias en investigación y creación de la Facultad de Arquitectura y Urbanismo</p>
-                <li>Área Prioritaria x.</li>
-                <pp>Énfasis</pp>
-                <dd>Investigación
-Creación </dd></div>
-                <div class="medio"><img src="viz/Magdalena-Cattan_06.gif"></div>
-                <div class="completo"><img src="viz/Magdalena-Cattan_07.gif"></div>
-                <div class="completo"><img src="viz/Magdalena-Cattan_08.png"></div>
+                <div class="medio"><img src="viz/profe2/foto-profe2-1.png"></div>
+                <div class="medio"><h1>Daniel Ferrera Leiva</h1>
+                <h4>Diseñador Gráfico</h4>
+                <p>Contacto: daniel.ferrera@uchile.cl</p>
+                <p>En jerarquización - Escuela de Pregrado.</p>
+                <h4>Facultad de Arquitectura y Urbanismo</h4>
+                <p>Jornada: -- hrs</p></div>
+                <div class="completo"><img src="viz/profe2/foto-profe2-2.png"></div>
+                <div class="completo"><img src="viz/profe2/foto-profe2-3.png"></div>
+                <div class="medio"><p>Áreas Prioritarias en investigación y creación de la Facultad de Arquitectura y Urbanismo:</p>
+                <ul>
+                    <li>Área Prioritaria 1: Sistemas físicos, naturales y cambios ambientales.</li>
+                <li>Área Prioritaria 4: Dinámicas y transformaciones morfológicas, urbanas y rurales.</li></ul>
+                <p> Líneas de Investigación del Departamento de Diseño:</p>
+                    <ul>
+                <li>Estudios Visuales y Mediales.</li>
+                    </ul>
+                <pp>Énfasis del Ciclo 3 del Plan de Estudios:</pp>
+             <ul>
+                    <li>Innovación.</li>
+                <li>Investigación.</li>
+                <li>Creación.</li></ul>
+             </div>
+                <div class="medio"><img src="viz/profe2/foto-profe2-4.png"></div>
+                <div class="completo"><img src="viz/profe2/foto-profe2-5.png"></div>
+                <div class="completo"><img src="viz/profe2/foto-profe2-6.jpg"></div>
+                <div class="completo"><img src="viz/profe2/foto-profe2-7.png"></div>
             </div>    
 		
             <div class="doble">
