--- a/profes.html
+++ b/profes.html
@@ -99,6 +99,10 @@
                 <p>En jerarquización - Escuela de Pregrado.</p>
                 <h4>Facultad de Arquitectura y Urbanismo</h4>
                 <p>Jornada: -- hrs</p></div>
+             <div class="completo">
+        <h1> Enfoque de guiatura</h1>
+            <p>Gestión de proyectos en contextos interculturales, proyectos de diseño y proyectos de desarrollo económico local. Metodología del diseño y metodología de la investigación. Creatividad, innovación y emprendimiento en diseño. Investigación de experiencia de usuario, diseño de interacción y diseño de interfase. Ética profesional del diseño.</p>
+            </div>
                 <div class="completo"><img src="viz/profe2/foto-profe2-2.png"></div>
                 <div class="completo"><img src="viz/profe2/foto-profe2-3.png"></div>
                 <div class="medio"><p>Áreas Prioritarias en investigación y creación de la Facultad de Arquitectura y Urbanismo:</p>
